--- a/assets/main.css
+++ b/assets/main.css
@@ -19,3 +19,18 @@ footer {
 .centered-text {
     text-align: center
 }
+
+ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+    list-style: none;
+    padding: 0;
+}
+
+li {
+    justify-self: center;
+}
