--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,11 +3,15 @@
   <div class="container">
     <div class="columns">
         <div class="column is-two-thirds">
-          <article class="content">
-            <h1 class="title">{{ .Title }}</h1>
-            {{ .Content }}
-            <footer>
-              <p class="half-text end-text">
+          <article class="">
+            <header>
+              <h1 class="title">{{ .Title }}</h1>
+            </header>
+            <section class="content">
+              {{ .Content }}
+            </section>
+            <footer class="content">
+              <p class="is-italic">
                 Published in
                 <time datetime="{{ .PublishDate }}"
                   >{{ .PublishDate.Format "January 2006" }}</time
