--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,12 @@
-    <footer class="footer has-text-centered">
-        <p>{{ .Site.Copyright }}</p>
-    </footer>
+<footer class="footer">
+  <div class="level container">
+    <div class="level-left">
+      <div class="level-item">
+        <p class="content has-text-small">{{ .Site.Copyright }}</p>
+      </div>
+    </div>
+    <div class="level-right">
+      <div class="level-item"></div>
+    </div>
+  </div>
+</footer>
