--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,21 +10,15 @@
     <meta name="title" content="{{ $title }}">
     <meta name="description" content="{{ $description }}">
 
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="{{ .Permalink }}">
-    <meta property="og:title" content="{{ $title }}">
-    <meta property="og:description" content="{{ $description }}">
-
-    <meta property="twitter:url" content="{{ .Permalink }}">
-    <meta property="twitter:title" content="{{ $title }}">
-    <meta property="twitter:description" content="{{ $description }}">
+    {{- template "_internal/opengraph.html" . -}}
+    {{- template "_internal/twitter_cards.html" . -}}
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="//fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
-    {{ $style := resources.Get "scss/main.scss" | toCSS | postCSS | minify | fingerprint "md5" }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}" media="screen">
+    {{ $style := resources.Get "scss/main.scss" | toCSS | postCSS |  minify | fingerprint "md5" }}
+    <link rel="stylesheet" href="{{ $style.RelPermalink }}" media="screen">
 
     <script src="https://kit.fontawesome.com/{{ .Site.Params.Fontawesome }}.js"></script>
 
