--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,17 +1,15 @@
-<header>
-  <section class="hero">
-    <div class="hero-body has-text-right">
-      <p class="title">
-        <a href="{{ .Site.Home.Permalink }}"> {{ .Site.Title }} </a>
-      </p>
-      <p class="subtitle">
-        {{ .Site.Params.subtitle | default "& these are some links" }} {{ range
-        $link := .Site.Params.links }}
-        <a href="{{ $link.url }}" title="{{ $link.name }}">
-          <i class="is-size-3 fab fa-{{ $link.fa_logo }}"></i>
-        </a>
-        {{ end }}
-      </p>
-    </div>
-  </section>
+<header clas="hero">
+  <article class="hero-body has-text-right">
+    <p class="title">
+      <a href="{{ .Site.Home.Permalink }}"> {{ .Site.Title }} </a>
+    </p>
+    <p class="subtitle">
+      {{ .Site.Params.subtitle | default "& these are some links" }} {{ range
+      $link := .Site.Params.links }}
+      <a href="{{ $link.url }}" title="{{ $link.name }}">
+        <i class="is-size-3 fab fa-{{ $link.fa_logo }}"></i>
+      </a>
+      {{ end }}
+    </p>
+  </article>
 </header>
