--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,11 @@
-<footer class="footer">
-  <div class="level container">
-    <div class="level-left">
-      <div class="level-item">
-        <p class="content has-text-small">{{ .Site.Copyright }}</p>
-      </div>
+<div class="mx-auto">
+  <div class="sm:flex sm:items-center sm:justify-between">
+    <div class="flex justify-center sm:justify-start text-gray-500 font-serif">
+      {{ .Site.Copyright }}
     </div>
-    <div class="level-right">
-      <div class="level-item"></div>
-    </div>
+
+    <p
+      class="mt-4 text-center text-sm text-gray-500 lg:mt-0 lg:text-right"
+    ></p>
   </div>
-</footer>
+</div>
