--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,8 +2,14 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
-        {{- block "main" . }}{{- end }}
-        {{- partial "footer.html" . -}}
+        <header class="p-12">
+            {{- partial "header.html" . -}}
+        </header>
+        <main class="p-12">
+            {{- block "main" . }}{{- end }}
+        </main>
+        <footer aria-label="Site Footer" class="p-12 bg-gray-50">
+            {{- partial "footer.html" . -}}
+        </footer>
     </body>
 </html>
