--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,16 @@
-<header clas="hero">
-  <article class="hero-body has-text-right">
-    <p class="title">
-      <a href="{{ .Site.Home.Permalink }}"> {{ .Site.Title }} </a>
-    </p>
-    <p class="subtitle">
-      {{ .Site.Params.subtitle | default "& these are some links" }} {{ range
-      $link := .Site.Params.links }}
-      <a href="{{ $link.url }}" title="{{ $link.name }}">
-        <i class="is-size-3 fab fa-{{ $link.fa_logo }}"></i>
-      </a>
-      {{ end }}
-    </p>
-  </article>
-</header>
+<article>
+  <p class="text-4xl font-serif">
+    <a href="{{ .Site.Home.Permalink }}"> {{ .Site.Title }} </a>
+  </p>
+  <p class="text-xl font-serif">
+    {{ .Site.Params.subtitle | default "& these are some links" }} {{ range
+    $link := .Site.Params.links }} |
+    <a
+      href="{{ $link.url }}"
+      title="{{ $link.name }}"
+      class="underline underline-offset-4 decoration-solid hover:decoration-double hover:underline-offset-1"
+      >{{ $link.display_name }}</a
+    >
+    {{ end }}
+  </p>
+</article>
